Fix: minor css changes to fix text truncate & text-breaks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,3 +83,9 @@ body {
     opacity: 1;
   }
 }
+
+@media (min-width: 768px) {
+  .w-md-50 {
+    width: 50% !important;
+  }
+}
